# Ensto_Aalto_Wireless_control_unit_of_electric_desk

./: Asm3.asm  CMakeLists.txt  README.md  control_box_lower.par  control_box_lower.stl  control_box_upper.stl  control_box_upper_part.par  prj.conf  sample.yaml
AndroidBLECentralApp/: settings.gradle
AndroidBLECentralApp/app/: build.gradle
AndroidBLECentralApp/app/src/androidTest/java/com/example/electricdeskcontroller/: ExampleInstrumentedTest.java
AndroidBLECentralApp/app/src/main/: AndroidManifest.xml
AndroidBLECentralApp/app/src/main/java/com/example/electricdeskcontroller/: SettingsActivity.java
AndroidBLECentralApp/app/src/main/res/values/: strings.xml
AndroidBLECentralApp/app/src/test/java/com/example/electricdeskcontroller/: ExampleUnitTest.java
AndroidBLECentralApp/gradle/wrapper/: gradle-wrapper.properties
Arduino_table_control/: Arduino_table_control.ino
Ensto_module/: Ensto_module-cache.lib  Ensto_module.kicad_pcb  Ensto_module.kicad_pcb-bak  Ensto_module.net  Ensto_module.pro  Ensto_module.sch  Ensto_module.sch-bak  _autosave-Ensto_module.sch
doc/: API.md
src/: BluetoothModule.cpp  BluetoothModule.hpp  DebugBlinker.cpp  DebugBlinker.hpp  DebugPrinter.cpp  DebugPrinter.hpp  DebugSwo.h  EncoderAnalyzer.cpp  EncoderAnalyzer.hpp  MotorController.cpp  MotorController.hpp  main.cpp
